--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <div class="inner">
         <h1>芝麻小站</h1>
         <h2>张慧敏的网络家园</h2>
-        <a href="http://zhm.me" class="button"><small>Follow me zhm.me</small>ZHM.me</a>
+        <a href="http://zhm.me" class="button"><small>Follow me</small>ZHM.me</a>
       </div>
     </header>
 
@@ -34,7 +34,7 @@
 
         <aside id="sidebar">
           <p>你看到的页面来自 <a href="zhm.me">芝麻小站</a> 你可以通过一下方式联系到我 <a href="http://blog.zhm.me">博客</a>. 
-            QQ:280188858 Email:zikercn@gmail.com
+            QQ: 280188858 Email: zikercn@gmail.com
           </p>
         </aside>
       </div>
