--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
         </section>
 
         <aside id="sidebar">
-          <p>你看到的页面来自 <a href="zhm.me">芝麻小站</a> 你可以通过一下方式联系到我 <a href="http://blog.zhm.me">博客</a>. 
-            QQ: 280188858 Email: zikercn@gmail.com
+          <p>你看到的页面来自 <a href="http://zhm.me">芝麻小站</a> 你可以通过一下方式联系到我 <a href="http://blog.zhm.me">博客</a>. 
+            <br />QQ: 280188858 Email: zikercn@gmail.com
           </p>
         </aside>
       </div>
