--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <div class="inner">
         <h1>芝麻小站</h1>
         <h2>张慧敏的网络家园</h2>
-        <a href="http://zhm.me" class="button"><small>Follow me</small>ZHM.me</a>
+        <a href="http://zhm.me" class="button"><small>Follow me </small>ZHM.me</a>
       </div>
     </header>
 
@@ -40,6 +40,16 @@
       </div>
     </div>
 
+            <script type="text/javascript">
+            var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+            document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+          </script>
+          <script type="text/javascript">
+            try {
+              var pageTracker = _gat._getTracker("UA-33270091-1");
+            pageTracker._trackPageview();
+            } catch(err) {}
+          </script>
   
   </body>
 </html>
